libs/cv/bindings/core.h

typedef struct ByteArray {
  char *data;
  int length;
} ByteArray;
// Wrapper for std::vector<int>
typedef struct IntVector {
  int *val;
  int length;
} IntVector;
// Wrapper for an individual cv::Point2f
typedef struct Point2f {
  float x;
  float y;
} Point2f;
typedef struct Point3f {
  float x;
  float y;
  float z;
} Point3f;
// Wrapper for an individual cv::cvPoint
typedef struct Point {
  int x;
  int y;
} Point;
// Wrapper for the vector of Point structs aka std::vector<Point>
typedef struct Points {
  Point *points;
  int length;
} Points;
// Wrapper for the vector of Point2f structs aka std::vector<Point2f>
typedef struct Points2f {
  Point2f *points;
  int length;
} Points2f;
typedef struct Points3f {
  Point3f *points;
  int length;
} Points3f;
// Contour is alias for Points
typedef Points Contour;
// Contour2f is alias for Points2f
typedef Points2f Contour2f;
typedef struct Contours2f {
  Contour2f *contours;
  int length;
} Contours2f;
// Contour3f is alias for Points3f
typedef Points3f Contour3f;
// Wrapper for the vector of Points3f vectors aka std::vector<
// std::vector<Point3f> >
typedef struct Contours3f {
  Contour3f *contours;
  int length;
} Contours3f;
// Wrapper for the vector of Points vectors aka std::vector< std::vector<Point>
// >
typedef struct Contours {
  Contour *contours;
  int length;
} Contours;
// Wrapper for an individual cv::cvScalar
typedef struct Scalar {
  double val1;
  double val2;
  double val3;
  double val4;
} Scalar;
typedef cv::Mat *Mat;
typedef cv::RNG *RNG;
typedef std::vector<cv::Point> *PointVector;
typedef std::vector<std::vector<cv::Point>> *PointsVector;
typedef std::vector<cv::Point2f> *Point2fVector;
typedef std::vector<std::vector<cv::Point2f>> *Points2fVector;
typedef std::vector<cv::Point3f> *Point3fVector;
typedef std::vector<std::vector<cv::Point3f>> *Points3fVector;
typedef void *Mat;
typedef void *RNG;
typedef void *PointVector;
typedef void *PointsVector;
typedef void *Point2fVector;
typedef void *Points2fVector;
typedef void *Point3fVector;
typedef void *Points3fVector;
struct ByteArray toByteArray(const char *buf, int len);
void Mat_Size(Mat m, IntVector *res);
struct ByteArray Mat_ToBytes(Mat m);
struct ByteArray Mat_DataPtr(Mat m);
int64_t GetCVTickCount();
double GetTickFrequency();
Mat Mat_rowRange(Mat m, int startrow, int endrow);
Mat Mat_colRange(Mat m, int startrow, int endrow);
PointVector PointVector_New();
PointVector PointVector_NewFromPoints(Contour points);
PointVector PointVector_NewFromMat(Mat mat);
Point PointVector_At(PointVector pv, int idx);
void PointVector_Append(PointVector pv, Point p);
int PointVector_Size(PointVector pv);
void PointVector_Close(PointVector pv);
PointsVector PointsVector_New();
PointsVector PointsVector_NewFromPoints(Contours points);
PointVector PointsVector_At(PointsVector psv, int idx);
void PointsVector_Append(PointsVector psv, PointVector pv);
int PointsVector_Size(PointsVector psv);
void PointsVector_Close(PointsVector psv);
Point2fVector Point2fVector_New();
void Point2fVector_Close(Point2fVector pfv);
Point2fVector Point2fVector_NewFromPoints(Contour2f pts);
Point2fVector Point2fVector_NewFromMat(Mat mat);
Point2f Point2fVector_At(Point2fVector pfv, int idx);
int Point2fVector_Size(Point2fVector pfv);
void IntVector_Close(struct IntVector ivec);
RNG TheRNG();
void SetRNGSeed(int seed);
void RNG_Fill(RNG rng, Mat mat, int distType, double a, double b,
              bool saturateRange);
double RNG_Gaussian(RNG rng, double sigma);
unsigned int RNG_Next(RNG rng);
void RandN(Mat mat, Scalar mean, Scalar stddev);
void RandShuffle(Mat mat);
void RandShuffleWithParams(Mat mat, double iterFactor, RNG rng);
void RandU(Mat mat, Scalar low, Scalar high);
void copyPointVectorToPoint2fVector(PointVector src, Point2fVector dest);
void StdByteVectorInitialize(void *data);
void StdByteVectorFree(void *data);
size_t StdByteVectorLen(void *data);
uint8_t *StdByteVectorData(void *data);
Points2fVector Points2fVector_New();
Points2fVector Points2fVector_NewFromPoints(Contours2f points);
int Points2fVector_Size(Points2fVector ps);
Point2fVector Points2fVector_At(Points2fVector ps, int idx);
void Points2fVector_Append(Points2fVector psv, Point2fVector pv);
void Points2fVector_Close(Points2fVector ps);
Point3fVector Point3fVector_New();
Point3fVector Point3fVector_NewFromPoints(Contour3f points);
Point3fVector Point3fVector_NewFromMat(Mat mat);
void Point3fVector_Append(Point3fVector pfv, Point3f point);
Point3f Point3fVector_At(Point3fVector pfv, int idx);
int Point3fVector_Size(Point3fVector pfv);
void Point3fVector_Close(Point3fVector pv);
Points3fVector Points3fVector_New();
Points3fVector Points3fVector_NewFromPoints(Contours3f points);
int Points3fVector_Size(Points3fVector ps);
Point3fVector Points3fVector_At(Points3fVector ps, int idx);
void Points3fVector_Append(Points3fVector psv, Point3fVector pv);
void Points3fVector_Close(Points3fVector ps);
void SetNumThreads(int n);
int GetNumThreads();