libs/cv/core.odin


	@(link_name = "toByteArray")
	tobytearray :: proc(buf: [^]byte, len: c.int) -> ByteArray ---

	@(link_name = "GetCVTickCount")
	get_tick_count :: proc() -> c.int64_t ---

	@(link_name = "GetTickFrequency")
	get_tick_frequency :: proc() -> c.double ---

	@(link_name = "Mat_rowRange")
	mat_rowrange :: proc(m: Mat, startrow, endrow: c.int) -> Mat ---

	@(link_name = "Mat_colRange")
	mat_colrange :: proc(m: Mat, startrow, endrow: c.int) -> Mat ---

	@(link_name = "PointVector_New")
	point_vector_new :: proc() -> PointVector ---

	@(link_name = "PointVector_NewFromPoints")
	point_vector_new_from_points :: proc(points: Contour) -> PointVector ---

	@(link_name = "PointVector_NewFromMat")
	point_vector_new_from_mat :: proc(mat: Mat) -> PointVector ---

	@(link_name = "PointVector_At")
	point_vector_at :: proc(pv: PointVector, idx: c.int) -> Point ---

	@(link_name = "PointVector_Append")
	point_vector_append :: proc(pv: PointVector, p: Point) ---

	@(link_name = "PointVector_Size")
	point_vector_size :: proc(p: PointVector) -> c.int ---

	@(link_name = "PointVector_Close")
	point_vector_close :: proc(p: PointVector) ---

	@(link_name = "PointsVector_New")
	points_vector_new :: proc() -> PointsVector ---

	@(link_name = "PointsVector_NewFromPoints")
	points_vector_newfrompoints :: proc(points: Contours) -> PointsVector ---

	@(link_name = "PointsVector_Size")
	points_vector_size :: proc(ps: PointsVector) -> int ---

	@(link_name = "PointsVector_At")
	points_vector_at :: proc(ps: PointsVector, idx: c.int) -> PointVector ---

	@(link_name = "PointsVector_Append")
	points_vector_append :: proc(psv: PointsVector, pv: PointVector) ---

	@(link_name = "PointsVector_Close")
	points_vector_close :: proc(ps: PointsVector) ---

	@(link_name = "Point2fVector_New")
	point2f_vector_new :: proc() -> Point2fVector ---

	@(link_name = "Point2fVector_NewFromPoints")
	point2f_vector_newfrompoints :: proc(points: Contour2f) -> Point2fVector ---

	@(link_name = "Point2fVector_NewFromMat")
	point2f_vector_newfrommat :: proc(mat: Mat) -> Point2fVector ---

	@(link_name = "Point2fVector_At")
	point2f_vector_at :: proc(pfv: Point2fVector, idx: c.int) -> Point2f ---

	@(link_name = "Point2fVector_Size")
	point2f_vector_size :: proc(pfv: Point2fVector) -> c.int ---

	@(link_name = "Point2fVector_Close")
	point2f_vector_close :: proc(pv: Point2fVector) ---

	@(link_name = "IntVector_Close")
	int_vector_close :: proc(ivec: IntVector) ---

	@(link_name = "TheRNG")
	the_rng :: proc() -> RNG ---

	@(link_name = "SetRNGSeed")
	set_rng_seed :: proc(seed: c.int) ---

	@(link_name = "RNG_Fill")
	rng_fill :: proc(rng: RNG, mat: Mat, distType: c.int, a: c.double, b: c.double, saturateRange: c.bool) ---

	@(link_name = "RNG_Gaussian")
	rng_gaussian :: proc(rng: RNG, sigma: c.double) -> c.double ---

	@(link_name = "RNG_Next")
	rng_next :: proc(rng: RNG) -> c.uint ---

	@(link_name = "RandN")
	randn :: proc(mat: Mat, mean, stddev: Scalar) ---

	@(link_name = "RandShuffle")
	rand_shuffle :: proc(mat: Mat) ---

	@(link_name = "RandShuffleWithParams")
	rand_shuffle_with_params :: proc(mat: Mat, iterFactor: c.double, rng: RNG) ---

	@(link_name = "RandU")
	rand_u :: proc(mat: Mat, low, high: Scalar) ---

	@(link_name = "copyPointVectorToPoint2fVector")
	copy_point_vector_to_point2f_vector :: proc(src, dest: Point2fVector) ---

	@(link_name = "StdByteVectorInitialize")
	std_byte_vector_initialize :: proc(data: rawptr) ---

	@(link_name = "StdByteVectorFree")
	std_byte_vector_free :: proc(data: rawptr) ---

	@(link_name = "StdByteVectorLen")
	std_byte_vector_len :: proc(data: rawptr) -> c.size_t ---

	@(link_name = "StdByteVectorData")
	std_byte_vector_data :: proc(data: rawptr) -> ^c.uint8_t ---

	@(link_name = "Points2fVector_New")
	points2f_vector_new :: proc() -> Points2fVector ---

	@(link_name = "Points2fVector_NewFromPoints")
	points2f_vector_new_from_points :: proc(points: Contours2f) -> Points2fVector ---

	@(link_name = "Points2fVector_Size")
	points2f_vector_size :: proc(ps: Points2fVector) -> c.int ---

	@(link_name = "Points2fVector_At")
	points2f_vector_at :: proc(ps: Points2fVector, idx: c.int) -> Point2fVector ---

	@(link_name = "Points2fVector_Append")
	points2f_vector_append :: proc(psv, pv: Point2fVector) ---

	@(link_name = "Points2fVector_Close")
	points2f_vector_close :: proc(ps: Points2fVector) ---

	@(link_name = "Point3fVector_New")
	point3f_vector_new :: proc() -> Point3fVector ---

	@(link_name = "Point3fVector_NewFromPoints")
	point3f_vector_newfrompoints :: proc(points: Contour3f) -> Point3fVector ---

	@(link_name = "Point3fVector_NewFromMat")
	point3f_vector_newfrommat :: proc(mat: Mat) -> Point3fVector ---

	@(link_name = "Point3fVector_At")
	point3f_vector_at :: proc(pfv: Point3fVector, idx: c.int) -> Point3f ---

	@(link_name = "Point3fVector_Append")
	point3f_vector_append :: proc(pfv: Point3fVector, point: Point3f) ---

	@(link_name = "Point3fVector_Size")
	point3f_vector_size :: proc(pfv: Point3fVector) -> c.int ---

	@(link_name = "Point3fVector_Close")
	point3f_vector_close :: proc(pv: Point3fVector) ---

	@(link_name = "Points3fVector_New")
	points3f_vector_new :: proc() -> Points3fVector ---

	@(link_name = "Points3fVector_NewFromPoints")
	points3f_vector_newfrompoints :: proc(points: Contours3f) -> Points3fVector ---

	@(link_name = "Points3fVector_Size")
	points3f_vector_size :: proc(ps: Points3fVector) -> c.int ---

	@(link_name = "Points3fVector_At")
	points3f_vector_at :: proc(ps: Points3fVector, idx: c.int) -> Point3fVector ---

	@(link_name = "Points3fVector_Append")
	points3f_vector_append :: proc(psv: Points3fVector, pv: Point3fVector) ---

	@(link_name = "Points3fVector_Close")
	points3f_vector_close :: proc(ps: Points3fVector) ---

	@(link_name = "SetNumThreads")
	set_num_threads :: proc(n: c.int) ---

	@(link_name = "GetNumThreads")
	get_num_threads :: proc() -> c.int ---
}

mat_to_bytes :: proc(m: Mat) -> []byte {
	arr := Mat_ToBytes(m)
	return arr.data[:arr.length]
}

mat_data_ptr :: proc(m: Mat) -> []byte {
	arr := Mat_DataPtr(m)
	return arr.data[:arr.length]
}

mat_size :: proc(m: Mat) -> (dims: []int) {
	res: IntVector
	Mat_Size(m, &res)

	dims = make([]int, res.length)
	for i in 0 ..< res.length {
		dims[i] = int(res.val[i])
	}

	return
}
